# pomodorio

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
